Changed time format, added periods

--- a/DSCI 100 Group Project.ipynb
+++ b/DSCI 100 Group Project.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "c92ef3fa-4aa7-45fd-b781-709aa353f4ca",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "[1535 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,8 +221,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "483cb56d-bce3-494b-8f5e-21b52a3526a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# session_data = session_data.assign(hour_only_start = session_data['start_time'].astype(str).str[11:13])\n",
+    "# session_data = session_data.assign(hour_only_end = session_data['end_time'].astype(str).str[11:13])\n",
+    "# session_data = session_data.assign(month = session_data['start_time'].astype(str).str[3:5])\n",
+    "\n",
+    "# session_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f4c12757-6e3e-4a9e-a15d-1cb5fe0cfdf8",
    "metadata": {},
    "outputs": [
     {
@@ -251,9 +265,14 @@
        "      <th>end_time</th>\n",
        "      <th>original_start_time</th>\n",
        "      <th>original_end_time</th>\n",
-       "      <th>hour_only_start</th>\n",
-       "      <th>hour_only_end</th>\n",
-       "      <th>month</th>\n",
+       "      <th>datetime_start</th>\n",
+       "      <th>datetime_end</th>\n",
+       "      <th>hour_start</th>\n",
+       "      <th>hour_end</th>\n",
+       "      <th>weekday_start</th>\n",
+       "      <th>weekday_end</th>\n",
+       "      <th>month_start</th>\n",
+       "      <th>month_end</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -264,9 +283,14 @@
        "      <td>30/06/2024 18:24</td>\n",
        "      <td>1.719770e+12</td>\n",
        "      <td>1.719770e+12</td>\n",
+       "      <td>2024-06-30 18:12:00</td>\n",
+       "      <td>2024-06-30 18:12:00</td>\n",
        "      <td>18</td>\n",
        "      <td>18</td>\n",
-       "      <td>06</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -275,9 +299,14 @@
        "      <td>17/06/2024 23:46</td>\n",
        "      <td>1.718670e+12</td>\n",
        "      <td>1.718670e+12</td>\n",
+       "      <td>2024-06-17 23:33:00</td>\n",
+       "      <td>2024-06-17 23:33:00</td>\n",
        "      <td>23</td>\n",
        "      <td>23</td>\n",
-       "      <td>06</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -286,9 +315,14 @@
        "      <td>25/07/2024 17:57</td>\n",
        "      <td>1.721930e+12</td>\n",
        "      <td>1.721930e+12</td>\n",
+       "      <td>2024-07-25 17:34:00</td>\n",
+       "      <td>2024-07-25 17:34:00</td>\n",
        "      <td>17</td>\n",
        "      <td>17</td>\n",
-       "      <td>07</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -297,9 +331,14 @@
        "      <td>25/07/2024 03:58</td>\n",
        "      <td>1.721880e+12</td>\n",
        "      <td>1.721880e+12</td>\n",
-       "      <td>03</td>\n",
-       "      <td>03</td>\n",
-       "      <td>07</td>\n",
+       "      <td>2024-07-25 03:22:00</td>\n",
+       "      <td>2024-07-25 03:22:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -308,12 +347,22 @@
        "      <td>25/05/2024 16:12</td>\n",
        "      <td>1.716650e+12</td>\n",
        "      <td>1.716650e+12</td>\n",
+       "      <td>2024-05-25 16:01:00</td>\n",
+       "      <td>2024-05-25 16:01:00</td>\n",
        "      <td>16</td>\n",
        "      <td>16</td>\n",
-       "      <td>05</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -330,9 +379,14 @@
        "      <td>10/05/2024 23:07</td>\n",
        "      <td>1.715380e+12</td>\n",
        "      <td>1.715380e+12</td>\n",
+       "      <td>2024-05-10 23:01:00</td>\n",
+       "      <td>2024-05-10 23:01:00</td>\n",
        "      <td>23</td>\n",
        "      <td>23</td>\n",
-       "      <td>05</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1531</th>\n",
@@ -341,9 +395,14 @@
        "      <td>01/07/2024 04:19</td>\n",
        "      <td>1.719810e+12</td>\n",
        "      <td>1.719810e+12</td>\n",
-       "      <td>04</td>\n",
-       "      <td>04</td>\n",
-       "      <td>07</td>\n",
+       "      <td>2024-07-01 04:08:00</td>\n",
+       "      <td>2024-07-01 04:08:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1532</th>\n",
@@ -352,9 +411,14 @@
        "      <td>28/07/2024 15:57</td>\n",
        "      <td>1.722180e+12</td>\n",
        "      <td>1.722180e+12</td>\n",
+       "      <td>2024-07-28 15:36:00</td>\n",
+       "      <td>2024-07-28 15:36:00</td>\n",
        "      <td>15</td>\n",
        "      <td>15</td>\n",
-       "      <td>07</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1533</th>\n",
@@ -363,9 +427,14 @@
        "      <td>25/07/2024 06:22</td>\n",
        "      <td>1.721890e+12</td>\n",
        "      <td>1.721890e+12</td>\n",
-       "      <td>06</td>\n",
-       "      <td>06</td>\n",
-       "      <td>07</td>\n",
+       "      <td>2024-07-25 06:15:00</td>\n",
+       "      <td>2024-07-25 06:15:00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1534</th>\n",
@@ -374,13 +443,18 @@
        "      <td>20/05/2024 02:45</td>\n",
        "      <td>1.716170e+12</td>\n",
        "      <td>1.716170e+12</td>\n",
-       "      <td>02</td>\n",
-       "      <td>02</td>\n",
-       "      <td>05</td>\n",
+       "      <td>2024-05-20 02:26:00</td>\n",
+       "      <td>2024-05-20 02:26:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1535 rows × 8 columns</p>\n",
+       "<p>1535 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -410,34 +484,63 @@
        "1533  25/07/2024 06:22         1.721890e+12       1.721890e+12   \n",
        "1534  20/05/2024 02:45         1.716170e+12       1.716170e+12   \n",
        "\n",
-       "     hour_only_start hour_only_end month  \n",
-       "0                 18            18    06  \n",
-       "1                 23            23    06  \n",
-       "2                 17            17    07  \n",
-       "3                 03            03    07  \n",
-       "4                 16            16    05  \n",
-       "...              ...           ...   ...  \n",
-       "1530              23            23    05  \n",
-       "1531              04            04    07  \n",
-       "1532              15            15    07  \n",
-       "1533              06            06    07  \n",
-       "1534              02            02    05  \n",
+       "          datetime_start        datetime_end  hour_start  hour_end  \\\n",
+       "0    2024-06-30 18:12:00 2024-06-30 18:12:00          18        18   \n",
+       "1    2024-06-17 23:33:00 2024-06-17 23:33:00          23        23   \n",
+       "2    2024-07-25 17:34:00 2024-07-25 17:34:00          17        17   \n",
+       "3    2024-07-25 03:22:00 2024-07-25 03:22:00           3         3   \n",
+       "4    2024-05-25 16:01:00 2024-05-25 16:01:00          16        16   \n",
+       "...                  ...                 ...         ...       ...   \n",
+       "1530 2024-05-10 23:01:00 2024-05-10 23:01:00          23        23   \n",
+       "1531 2024-07-01 04:08:00 2024-07-01 04:08:00           4         4   \n",
+       "1532 2024-07-28 15:36:00 2024-07-28 15:36:00          15        15   \n",
+       "1533 2024-07-25 06:15:00 2024-07-25 06:15:00           6         6   \n",
+       "1534 2024-05-20 02:26:00 2024-05-20 02:26:00           2         2   \n",
        "\n",
-       "[1535 rows x 8 columns]"
+       "      weekday_start  weekday_end  month_start  month_end  \n",
+       "0                 6            6            6          6  \n",
+       "1                 0            0            6          6  \n",
+       "2                 3            3            7          7  \n",
+       "3                 3            3            7          7  \n",
+       "4                 5            5            5          5  \n",
+       "...             ...          ...          ...        ...  \n",
+       "1530              4            4            5          5  \n",
+       "1531              0            0            7          7  \n",
+       "1532              6            6            7          7  \n",
+       "1533              3            3            7          7  \n",
+       "1534              0            0            5          5  \n",
+       "\n",
+       "[1535 rows x 13 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "session_data = session_data.assign(hour_only_start = session_data['start_time'].astype(str).str[11:13])\n",
-    "session_data = session_data.assign(hour_only_end = session_data['end_time'].astype(str).str[11:13])\n",
-    "session_data = session_data.assign(month = session_data['start_time'].astype(str).str[3:5])\n",
+    "from datetime import datetime as dt\n",
+    "\n",
+    "session_data = session_data.assign(datetime_start = pd.to_datetime(session_data[\"start_time\"], format = \"%d/%m/%Y %H:%M\"))\n",
+    "session_data = session_data.assign(datetime_end = pd.to_datetime(session_data[\"start_time\"], format = \"%d/%m/%Y %H:%M\"))\n",
+    "\n",
+    "session_data = session_data.assign(hour_start = session_data[\"datetime_start\"].apply(lambda x: x.hour)) # Taking the hour start.\n",
+    "session_data = session_data.assign(hour_end = session_data[\"datetime_end\"].apply(lambda x: x.hour)) # Taking the hour end.\n",
+    "session_data = session_data.assign(weekday_start = session_data[\"datetime_start\"].apply(dt.weekday)) # Taking the weekday start.\n",
+    "session_data = session_data.assign(weekday_end = session_data[\"datetime_end\"].apply(dt.weekday)) # Taking the weekday end.\n",
+    "session_data = session_data.assign(month_start = session_data[\"datetime_end\"].apply(lambda x: x.month)) # Taking the month start.\n",
+    "session_data = session_data.assign(month_end = session_data[\"datetime_end\"].apply(lambda x: x.month)) # Taking the month end.\n",
     "\n",
     "session_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d653194a-0577-438b-8592-75f69852f429",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -456,7 +559,7 @@
    "id": "34434888-1abd-4595-bd27-f5af855cca09",
    "metadata": {},
    "source": [
-    "Our group is interested in exploring the question of \"What time windows are most likely to have a high number of simultaneous players?\" By using the data ana analyzing start and end times, we can identify periods with the highest overlap in play sessions. To achieve this, only the data on play sessions is needed and used. This data contains the variables"
+    "Our group is interested in exploring the question of \"What time windows are most likely to have a high number of simultaneous players?\" By using the data and analyzing start and end times, we can identify periods with the highest overlap in play sessions. To achieve this, only the data on play sessions is needed and used. This data contains the variables"
    ]
   },
   {
